[package]
name = "asv_env_rattler"
version = "0.4.1"
edition = "2021"
description = "ASV rattler environment backend (Rust/maturin over rattler crates)"
license = "BSD-3-Clause"
rust-version = "1.82"

[lib]
name = "asv_env_rattler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
# Compatible set with rattler 0.46 line
rattler = { version = "0.46", default-features = true }
rattler_conda_types = "0.47"
rattler_solve = { version = "7.2", features = ["resolvo"] }
rattler_repodata_gateway = { version = "0.29", features = ["sparse", "gateway"] }
rattler_virtual_packages = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[profile.release]
lto = "thin"
