[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_env_rattler"
version = "0.1.2"
description = "ASV environment plugin (rattler) — install and list in asv.conf.json plugins"
requires-python = ">=3.10"
dependencies = [
  "asv>=0.6.5",
  "packaging",
  "py-rattler>=0.22",
  "PyYAML",
]

[project.entry-points."asv.plugins"]
rattler = "asv_env_rattler"

[tool.setuptools.packages.find]
include = ["asv_env_rattler*"]
