[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_env_rattler"
version = "0.2.0"
description = "ASV environment backend for environment_type=rattler (py-rattler APIs)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
  "asv>=0.6.5",
  "packaging",
  "py-rattler>=0.22",
  "PyYAML",
]

[project.entry-points."asv.environment_backends"]
rattler = "asv_env_rattler:Rattler"

[project.entry-points."asv.plugins"]
rattler = "asv_env_rattler:Rattler"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["asv_env_rattler*"]
