[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "asv_env_rattler"
version = "0.4.0"
description = "ASV environment_type=rattler via maturin wheel over rattler Rust crates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
  "asv>=0.6.5",
]

[project.entry-points."asv.environment_backends"]
rattler = "asv_env_rattler:Rattler"

[project.entry-points."asv.plugins"]
rattler = "asv_env_rattler:Rattler"

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "asv_env_rattler._native"
